# zephyr_sandbox

./: README.md
dynamic_web/: .gitignore  AGENTS.md  CMakeLists.txt  Kconfig  README.md  prj.conf  sections-rom.ld
dynamic_web/boards/: m5stack_core2_procpu.overlay
dynamic_web/src/: app_utils.c  app_utils.h  filesystem_service.c  filesystem_service.h  main.c  webserver_service.c  webserver_service.h  wifi_secrets.h.example  wifi_service.c  wifi_service.h
dynamic_web/web/: app.js  index.html  styles.css
lvgl_game_snake/: AGENTS.md  CMakeLists.txt  README.md  prj.conf
lvgl_game_snake/src/: main.c
lvgl_hello_world/: CMakeLists.txt  README.md  prj.conf
lvgl_hello_world/boards/: esp32s3_touch_lcd_1_28.overlay
lvgl_hello_world/src/: main.c
lvgl_music_player/: .gitignore  CMakeLists.txt  README.md  prj.conf  prj_ncs_hids.conf
lvgl_music_player/modules/nrf_ble_hids/: CMakeLists.txt  Kconfig
lvgl_music_player/modules/nrf_ble_hids/subsys/bluetooth/: CMakeLists.txt
lvgl_music_player/modules/nrf_ble_hids/subsys/bluetooth/services/: CMakeLists.txt  Kconfig
lvgl_music_player/src/: bluetooth_ctrl.c  bluetooth_ctrl.h  main.c  picture1_bg.c  screen_bluetooth.c  screen_bluetooth.h  screen_menu.c  screen_menu.h  screen_music_player.c  screen_music_player.h  ui_scale.c  ui_scale.h  ui_screens.c  ui_screens.h
